--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PokerSolver": {
       "commandName": "Project",
-      "commandLineArgs": "10d 12s 2h 3c 14d"
+      "commandLineArgs": "10d 12s 2d 3c 14d 4d 7d"
     }
   }
 }
