--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PokerSolver": {
       "commandName": "Project",
-      "commandLineArgs": "11d 14d 13d 9h 10d 2d 12d 8c"
+      "commandLineArgs": "10d 10s 5s 2d 2h 8h 8c"
     }
   }
 }
